cmake_minimum_required(VERSION 2.8)
project(goodtimes)
if(APPLE)
  include_directories(/usr/local/include/)
  link_directories(/usr/local/lib/)
endif(APPLE)
add_executable(4channelbypass programs/4channelbypass/b.c)
target_link_libraries(4channelbypass jack)
add_executable(counter programs/counter/main.cpp)
target_link_libraries(counter allegro allegro_font allegro_ttf)
add_executable(videotests programs/videotests/main.cpp)
target_link_libraries(videotests allegro allegro_font allegro_ttf allegro_primitives allegro_color)
add_executable(peakmeter programs/peakmeter/main.cpp)
target_link_libraries(peakmeter allegro allegro_font allegro_ttf allegro_primitives jack)
add_executable(metronome programs/metronome/main.cpp)
target_link_libraries(metronome allegro allegro_font allegro_ttf allegro_primitives)
add_executable(stdinaudio programs/stdinaudio/main.cpp)
target_link_libraries(stdinaudio allegro allegro_font allegro_ttf allegro_primitives allegro_audio)
add_executable(tiasynth programs/tiasynth/main.cpp programs/tiasynth/TIASnd.cxx)
target_link_libraries(tiasynth allegro allegro_font allegro_ttf allegro_primitives jack)
target_compile_features(tiasynth PRIVATE cxx_range_for)
add_executable(vicsynth programs/vicsynth/main.cpp)
target_link_libraries(vicsynth allegro allegro_font allegro_ttf allegro_primitives jack)
add_executable(pads programs/pads/main.cpp)
target_link_libraries(pads allegro allegro_font allegro_ttf allegro_primitives allegro_audio allegro_acodec allegro_dialog allegro_image jack)
add_executable(credits programs/credits/main.cpp)
target_link_libraries(credits allegro allegro_font allegro_ttf allegro_primitives)
add_executable(lightshow programs/lightshow/main.cpp)
target_link_libraries(lightshow jack)
add_executable(synth1 programs/synth1/main.cpp)
target_link_libraries(synth1 allegro allegro_font allegro_ttf allegro_primitives jack)
add_executable(thegame programs/thegame/engine.cpp programs/thegame/main.cpp)
target_link_libraries(thegame allegro allegro_font allegro_ttf allegro_primitives allegro_image)
add_executable(timertest programs/timertest/main.cpp)
target_link_libraries(timertest allegro)
