cmake_minimum_required(VERSION 2.8)
project(goodtimes)
if (WIN32)
  link_directories(../winlib/x86)
  include_directories(wininclude)
endif (WIN32)
if (APPLE)
  include_directories(/usr/local/include/)
  link_directories(/usr/local/lib/)
  find_library(HAVE_APPKIT AppKit PATHS ${CMAKE_OSX_SYSROOT}/System/Library PATH_SUFFIXES Frameworks NO_DEFAULT_PATH)
endif (APPLE)
find_library(HAVE_JACK jack)
if (HAVE_JACK)
add_executable(4channelbypass programs/4channelbypass/b.c)
add_executable(peakmeter programs/peakmeter/main.cpp)
add_executable(tiasynth programs/tiasynth/main.cpp programs/tiasynth/TIASnd.cxx)
add_executable(lightshow programs/lightshow/main.cpp)
add_executable(vicsynth programs/vicsynth/main.cpp)
add_executable(synth1 programs/synth1/main.cpp)
add_executable(ssinter programs/soundtracker/soundchip.cpp programs/soundtracker/ssinter.cpp programs/soundtracker/ssmain.cpp)
endif (HAVE_JACK)
add_executable(videotests programs/videotests/main.cpp)
add_executable(counter programs/counter/main.cpp)
add_executable(metronome programs/metronome/main.cpp)
add_executable(stdinaudio programs/stdinaudio/main.cpp)
add_executable(pads programs/pads/main.cpp)
add_executable(credits programs/credits/main.cpp)
add_executable(thegame programs/thegame/engine.cpp programs/thegame/main.cpp)
add_executable(timertest programs/timertest/main.cpp)
set(TRACKER_SRC programs/soundtracker/soundchip.cpp
                programs/soundtracker/graphics.cpp
                programs/soundtracker/ssinter.cpp
                programs/soundtracker/fextra.cpp
                programs/soundtracker/main.cpp)
if (APPLE)
list(APPEND TRACKER_SRC programs/soundtracker/nsstub.m)
endif (APPLE)
add_executable(soundtracker ${TRACKER_SRC})
if (HAVE_JACK)
target_link_libraries(4channelbypass jack)
target_link_libraries(lightshow jack)
target_link_libraries(synth1 allegro allegro_main allegro_font allegro_ttf allegro_primitives jack)
target_link_libraries(peakmeter allegro allegro_main allegro_font allegro_ttf allegro_primitives jack)
target_link_libraries(tiasynth allegro allegro_main allegro_font allegro_ttf allegro_primitives jack)
target_compile_features(tiasynth PRIVATE cxx_range_for)
target_link_libraries(vicsynth allegro allegro_main allegro_font allegro_ttf allegro_primitives jack)
target_link_libraries(ssinter jack)
endif (HAVE_JACK)
if (WIN32)
 target_link_libraries(pads allegro allegro_font allegro_ttf allegro_primitives allegro_audio allegro_acodec allegro_dialog allegro_image SDL2 SDL2main)
 target_link_libraries(soundtracker allegro allegro_font allegro_ttf allegro_primitives allegro_image allegro_audio allegro_acodec allegro_dialog SDL2 SDL2main)
else (WIN32)
 if (NOT HAVE_JACK)
  target_compile_definitions(pads PUBLIC NO_JACK)
  target_link_libraries(soundtracker allegro allegro_main allegro_font allegro_ttf allegro_primitives allegro_image allegro_audio allegro_acodec allegro_dialog SDL2)
 else (NOT HAVE_JACK)
  target_compile_definitions(soundtracker PUBLIC JACK)
 target_link_libraries(soundtracker allegro allegro_main allegro_font allegro_ttf allegro_primitives allegro_image allegro_audio allegro_acodec allegro_dialog jack)
 endif (NOT HAVE_JACK)
 if (NOT APPLE)
   target_link_libraries(soundtracker X11)
 endif ()
 target_link_libraries(pads allegro allegro_main allegro_font allegro_ttf allegro_primitives allegro_audio allegro_acodec allegro_dialog allegro_image SDL2 jack)
endif (WIN32)
if (APPLE)
target_link_libraries(thegame allegro allegro_main allegro_font allegro_ttf allegro_primitives allegro_image)
target_link_libraries(credits allegro allegro_main allegro_font allegro_ttf allegro_primitives)
target_link_libraries(metronome allegro allegro_main allegro_font allegro_ttf allegro_primitives)
target_link_libraries(counter allegro allegro_main allegro_font allegro_ttf)
target_link_libraries(videotests allegro allegro_main allegro_font allegro_ttf allegro_primitives allegro_color)
target_link_libraries(stdinaudio allegro allegro_main allegro_font allegro_ttf allegro_primitives allegro_audio)
target_link_libraries(timertest allegro allegro_main)
target_link_libraries(soundtracker ${HAVE_APPKIT})
else (APPLE)
target_link_libraries(thegame allegro allegro_font allegro_ttf allegro_primitives allegro_image)
target_link_libraries(credits allegro allegro_font allegro_ttf allegro_primitives)
target_link_libraries(metronome allegro allegro_font allegro_ttf allegro_primitives)
target_link_libraries(counter allegro allegro_font allegro_ttf)
target_link_libraries(videotests allegro allegro_font allegro_ttf allegro_primitives allegro_color)
target_link_libraries(stdinaudio allegro allegro_font allegro_ttf allegro_primitives allegro_audio)
target_link_libraries(timertest allegro)
endif (APPLE)
